Remove NodeGoat Commit WebGoat